# maccabipedia_mediawiki_bot

./: .gitattributes  .gitignore  CLAUDE.md  README.md  add_publish_date_for_papers.py  broken_videos.html  broken_videos.txt  check_broken_and_backups.py  coachesbot.py  create_basketball_season_redirects.py  create_volleyball_season_redirects.py  dry_run.py  extract_links.py  fetch_and_upload_last_game_to_maccabipedia.py  fetch_games_from_maccabi_tlv_site.py  fix_basketball_players_template.py  games_full_link.py  gamesbot.py  gamesbot_basketball.py  gamesbot_volleyball.py  league_tables_files_to_game_pages.py  maccabistats_player_event.py  main_volleyball.py  move_game_without_prefix2.py  move_table_template.py  mpbot.py  notify_broken_youtube_videos.py  playersbot.py  prettify_games_pages.py  pyproject.toml  pywikibot_boilerplate.py  refresh_by_category.py  refresh_games.py  remove_broken_video_links.py  replace_custom_field_name.py  requirements.txt  run_and_export.py  sort_players_events.py  teamsbot.py  telegram_preview.html  (+15 more)
.agent/: AGENTS.md
.claude/: external_club_history_sites.md  maccabipedia_research_sources.md  maccabipedia_structure_knowledge.md  maccabipedia_youtube_channel.md  maccabistats_knowledge.md  settings.json  trello_board_structure.md  video_backup_drive.md
basketball/: basketball_game.py  crawl_basket_co_il.py  crawl_maccbai_co_il.py  merge_all_results_files.py  teams_names_changer.py
bots/: refereesbot.py  stadiumsbot.py
calendar/: google_calendar_api.py  maccabi_tlv_site.py
data/: mandate_games_with_scorers.csv
old/: cargo_dumper.py  (+2 more)
(+533 files in other folders)
