[project]
name = "maccabipediabot"
version = "0.1.0"
description = "MaccabiPedia MediaWiki Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mwparserfromhell==0.6.6",
    "pywikibot==9.6.0",
    "requests==2.32.3",
    "pandas==2.2.3",
    "lxml>=4.9.1,<5",
    "maccabistats>=2.50",
    "html5lib==1.1",
    "google-api-python-client==1.12.8",
    "google-auth-oauthlib==0.4.2",
    "beautifulsoup4>=4.9.3",
    "python-dotenv==0.15.0",
    "tldextract==5.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
